--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,7 @@ install:
   - pip install djangorestframework_simplejwt
 
 script:
-  - python manage.py test
+  - coverage run --source=api manage.py test && coverage report 
+
+after_success:
+- coveralls
