--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
 asgiref==3.2.3
+astroid==2.3.3
+certifi==2019.11.28
 cffi==1.14.0
+chardet==3.0.4
+coverage==5.0.3
+coveralls==1.11.1
 cryptography==2.8
 Django==3.0.4
 djangorestframework==3.11.0
+docopt==0.6.2
+idna==2.9
+isort==4.3.21
 jwt==0.6.1
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pkg-resources==0.0.0
 psycopg2==2.8.4
 pycparser==2.20
+pylint==2.4.4
 python-decouple==3.3
 pytz==2019.3
+requests==2.23.0
 six==1.14.0
 sqlparse==0.3.1
+typed-ast==1.4.1
+urllib3==1.25.8
+wrapt==1.11.2
