--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ chardet==3.0.4
 coverage==5.0.3
 coveralls==1.11.1
 cryptography==2.8
+dj-database-url==0.5.0
 Django==3.0.4
 djangorestframework==3.11.0
 docopt==0.6.2
+gunicorn==20.0.4
 idna==2.9
 isort==4.3.21
 jwt==0.6.1
@@ -25,4 +27,5 @@ six==1.14.0
 sqlparse==0.3.1
 typed-ast==1.4.1
 urllib3==1.25.8
+whitenoise==5.0.1
 wrapt==1.11.2
