--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,12 @@ chardet==3.0.4
 coverage==5.0.3
 coveralls==1.11.1
 cryptography==2.8
+dj-database-url==0.5.0
 Django==3.0.4
 djangorestframework==3.11.0
+djangorestframework-simplejwt==4.4.0
 docopt==0.6.2
+gunicorn==20.0.4
 idna==2.9
 isort==4.3.21
 jwt==0.6.1
@@ -16,6 +19,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 psycopg2==2.8.4
 pycparser==2.20
+PyJWT==1.7.1
 pylint==2.4.4
 python-decouple==3.3
 pytz==2019.3
@@ -25,4 +29,5 @@ six==1.14.0
 sqlparse==0.3.1
 typed-ast==1.4.1
 urllib3==1.25.8
+whitenoise==5.0.1
 wrapt==1.11.2
