--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cryptography==2.8
 dj-database-url==0.5.0
 Django==3.0.4
 djangorestframework==3.11.0
+djangorestframework-simplejwt==4.4.0
 docopt==0.6.2
 gunicorn==20.0.4
 idna==2.9
@@ -18,6 +19,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 psycopg2==2.8.4
 pycparser==2.20
+PyJWT==1.7.1
 pylint==2.4.4
 python-decouple==3.3
 pytz==2019.3
