add django cord [Delivers #171805704]

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ coverage==5.0.3
 coveralls==1.11.1
 cryptography==2.8
 Django==3.0.4
+django-cors-headers==3.2.1
 djangorestframework==3.11.0
 docopt==0.6.2
 drf-yasg==1.17.1
